--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td><a class="forgetten" href="forgetten.html">forgetten Password?</a></td>
+                            <td><a class="forgetten" href="forgetten.html">forget Password?</a></td>
                         </tr>
                     </table>
 
