--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             </div>
 
         </div>
+        <div class="main-body">
+            <div class="left-section">
+
+            </div>
+            <div class="right-section">
+
+            </div>
+
+        </div>
 
     </div>
     
