last modfication for sample css project

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
         </div>
         <div class="main-body">
             <div class="left-section">
-
+                <p class="para">Facebook helps you connect and share with the<br>people in your life.</p>
+                
             </div>
             <div class="right-section">
+                <h1>Create an account</h1>
+
 
             </div>
 
